...
          )),
      floatingActionButtonLocation: FloatingActionButtonLocation.centerFloat,
      floatingActionButton: Consumer<HomeViewModel>(builder: (context, viewModel, child) {
        return SizedBox(
          height: 60,
          child: ElevatedButton(
              key: const Key("createEventButton"),
              style: ElevatedButton.styleFrom(
                  backgroundColor: AppColours.colour3(brightness),
                  foregroundColor: AppColours.colour1(brightness)),
              onPressed: () => {
                    if (_selectedDay != null)
                      {
...
                                  height: 160,
                                  padding: const EdgeInsets.all(16.0),
                                  child: Column(
                                    mainAxisSize: MainAxisSize.min,
                                    children: [
                                      TextField(
                                          key: const Key("eventTextField"),
                                          decoration: const InputDecoration(
                                              hintText: "Event Name", border: OutlineInputBorder()),
                                          controller: enteredEventNameController,
                                          onSubmitted: (value) async {}),
                                      const SizedBox(height: 15),
                                      ElevatedButton(
                                          key: const Key("submitEventButton"),
                                          style: ElevatedButton.styleFrom(
                                              backgroundColor: AppColours.colour3(brightness),
                                              foregroundColor: AppColours.colour1(brightness),
                                              fixedSize: const Size(100, 50)),
                                          onPressed: () async {
                                            if (enteredEventNameController.text.isNotEmpty) {
...
                ));
          },
          type: BottomNavigationBarType.fixed,

          //Icons in the bottom nav bar
          items: const [
            BottomNavigationBarItem(icon: Icon(Icons.home), label: "Home"),
            BottomNavigationBarItem(
                icon: Icon(Icons.dry_cleaning_sharp), label: "Chores", key: Key("choresPage")),
            BottomNavigationBarItem(icon: Icon(Icons.monetization_on), label: "Finance"),
            BottomNavigationBarItem(icon: Icon(Icons.shopping_cart), label: "Shopping"),
            BottomNavigationBarItem(icon: Icon(Icons.health_and_safety), label: "Medical")
          ],
        ));
  }
...
