...
              height: 160,
              padding: const EdgeInsets.all(16.0),
              child: Column(
                mainAxisSize: MainAxisSize.min,
                children: [
                  TextField(
                    key: const Key("choreTextField"),
                    decoration: const InputDecoration(
                        hintText: "Task Name", border: OutlineInputBorder()),
                    controller: enteredTaskNameController,
                    onSubmitted: (value) {
                    }
                  ),

                  const SizedBox(height: 15),

                  ElevatedButton(
                  key: const Key("submitChoreButton"),
                  style: ElevatedButton.styleFrom(
                    backgroundColor: AppColours.colour3(brightness),
                    foregroundColor: AppColours.colour1(brightness),
                    fixedSize: const Size(100, 50)),
                  onPressed: () {
                    if (enteredTaskNameController.text.isNotEmpty) {
...
